# combinatorics

./: .gitignore  CMakeLists.txt  CppProperties.json  README.md
lw1/task1/NarayanaAlgorithm/: NarayanaAlgorithm.cpp  NarayanaAlgorithm.sln  NarayanaAlgorithm.vcxproj  NarayanaAlgorithm.vcxproj.filters  input.txt  results.txt
lw1/task2/Johnson-TrotterAlgorithm/: Johnson-TrotterAlgorithm.cpp  Johnson-TrotterAlgorithm.sln  Johnson-TrotterAlgorithm.vcxproj  Johnson-TrotterAlgorithm.vcxproj.filters  results.txt
lw1/task3/RandomPermutation/: RandomPermutation.cpp  RandomPermutation.sln  RandomPermutation.vcxproj
lw1/task5/GenerateOfCompositions/: GenerateOfCompositions.cpp  GenerateOfCompositions.sln  GenerateOfCompositions.vcxproj  GenerateOfCompositions.vcxproj.filters
lw1/task6/BackpackSolution/: BackpackSolution.cpp  BackpackSolution.sln  BackpackSolution.vcxproj  BackpackSolution.vcxproj.filters  input.txt
lw1/task7/TSPSolution/: CGraph.h  GraphModuleImplementaion.cpp  TSPSolution.cpp  TSPSolution.sln  TSPSolution.vcxproj  TSPSolution.vcxproj.filters  input.txt  output.txt
lw2/BranchAndBound/src/: CGraphController.cpp  CGraphController.h  CMakeLists.txt  main.cpp
lw2/BranchAndBound/test/: CMakeLists.txt  GraphController_test.cpp
lw3/GraphColoring/src/: CGraph.cpp  CGraph.h  CMakeLists.txt
lw3/GraphColoring/test/: CMakeLists.txt  GraphColoring_test.cpp
lw4/SteinerProblem/src/: CMakeLists.txt  Graph.cpp  Graph.h
lw4/SteinerProblem/test/: CMakeLists.txt  (+1 more)
lw6/Matching/test/: CMakeLists.txt  MaxMatching_test.cpp
lw6/Matching/test/data/: bipartiteGraph.txt
(+13 files in other folders)
